# serializer version: 1
# name: TestSwimmerCostEqual.test_snapshot
  0.071719583982276
# ---
# name: TestSwimmerCostEqual.test_snapshot.1
  0.039473605811873
# ---
# name: TestSwimmerCostEqual.test_snapshot.10
  0.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.11
  dict({
    'cost_ctrl': 0.0,
    'cost_velocity': 1.0,
    'reference': 1.0,
    'reference_error': -1.0,
    'state_of_interest': 0.0,
  })
# ---
# name: TestSwimmerCostEqual.test_snapshot.12
  0.058693061800077
# ---
# name: TestSwimmerCostEqual.test_snapshot.13
  0.064900978847532
# ---
# name: TestSwimmerCostEqual.test_snapshot.14
  -0.103079369570738
# ---
# name: TestSwimmerCostEqual.test_snapshot.15
  0.026767619662024
# ---
# name: TestSwimmerCostEqual.test_snapshot.16
  0.797775310945373
# ---
# name: TestSwimmerCostEqual.test_snapshot.17
  -0.694656458721514
# ---
# name: TestSwimmerCostEqual.test_snapshot.18
  1.32034039323704
# ---
# name: TestSwimmerCostEqual.test_snapshot.19
  -1.066701182842449
# ---
# name: TestSwimmerCostEqual.test_snapshot.2
  -0.08116453042247
# ---
# name: TestSwimmerCostEqual.test_snapshot.20
  1.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.21
  -0.940159608181165
# ---
# name: TestSwimmerCostEqual.test_snapshot.22
  0.059840391818835
# ---
# name: TestSwimmerCostEqual.test_snapshot.23
  0.883900088855362
# ---
# name: TestSwimmerCostEqual.test_snapshot.24
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.25
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.26
  dict({
    'cost_ctrl': 3.1515109539e-05,
    'cost_velocity': 0.883900088855362,
    'distance_from_origin': 0.057407406313486,
    'reference': 1.0,
    'reference_error': -0.940159608181165,
    'state_of_interest': 0.059840391818835,
    'x_position': 0.057184825383946,
    'x_velocity': 0.059840391818835,
    'y_position': 0.005050351022386,
    'y_velocity': 0.431866576799383,
  })
# ---
# name: TestSwimmerCostEqual.test_snapshot.27
  0.01847525977697
# ---
# name: TestSwimmerCostEqual.test_snapshot.28
  0.134649152175537
# ---
# name: TestSwimmerCostEqual.test_snapshot.29
  -0.145705299215837
# ---
# name: TestSwimmerCostEqual.test_snapshot.3
  0.095124470327351
# ---
# name: TestSwimmerCostEqual.test_snapshot.30
  0.011608170523165
# ---
# name: TestSwimmerCostEqual.test_snapshot.31
  1.32759481364648
# ---
# name: TestSwimmerCostEqual.test_snapshot.32
  -1.287229679602866
# ---
# name: TestSwimmerCostEqual.test_snapshot.33
  2.124422100938903
# ---
# name: TestSwimmerCostEqual.test_snapshot.34
  -1.050781983705994
# ---
# name: TestSwimmerCostEqual.test_snapshot.35
  1.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.36
  -0.98504839007075
# ---
# name: TestSwimmerCostEqual.test_snapshot.37
  0.01495160992925
# ---
# name: TestSwimmerCostEqual.test_snapshot.38
  0.970320330780977
# ---
# name: TestSwimmerCostEqual.test_snapshot.39
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.4
  0.052227940398071
# ---
# name: TestSwimmerCostEqual.test_snapshot.40
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.41
  dict({
    'cost_ctrl': 6.7018646002e-05,
    'cost_velocity': 0.970320330780977,
    'distance_from_origin': 0.075182090303674,
    'reference': 1.0,
    'reference_error': -0.98504839007075,
    'state_of_interest': 0.01495160992925,
    'x_position': 0.057782889781116,
    'x_velocity': 0.01495160992925,
    'y_position': 0.048098693859327,
    'y_velocity': 1.07620857092353,
  })
# ---
# name: TestSwimmerCostEqual.test_snapshot.42
  -0.001365456293707
# ---
# name: TestSwimmerCostEqual.test_snapshot.43
  0.152961233266787
# ---
# name: TestSwimmerCostEqual.test_snapshot.44
  -0.120662973989439
# ---
# name: TestSwimmerCostEqual.test_snapshot.45
  0.150390800293635
# ---
# name: TestSwimmerCostEqual.test_snapshot.46
  -0.294518773235407
# ---
# name: TestSwimmerCostEqual.test_snapshot.47
  0.255488978761761
# ---
# name: TestSwimmerCostEqual.test_snapshot.48
  -1.130137672743914
# ---
# name: TestSwimmerCostEqual.test_snapshot.49
  2.220792926335492
# ---
# name: TestSwimmerCostEqual.test_snapshot.5
  0.057212861055391
# ---
# name: TestSwimmerCostEqual.test_snapshot.50
  1.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.51
  -0.910529719768756
# ---
# name: TestSwimmerCostEqual.test_snapshot.52
  0.089470280231244
# ---
# name: TestSwimmerCostEqual.test_snapshot.53
  0.829064370582169
# ---
# name: TestSwimmerCostEqual.test_snapshot.54
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.55
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.56
  dict({
    'cost_ctrl': 0.000156363463402,
    'cost_velocity': 0.829064370582169,
    'distance_from_origin': 0.091589007017534,
    'reference': 1.0,
    'reference_error': -0.910529719768756,
    'state_of_interest': 0.089470280231244,
    'x_position': 0.061361700990366,
    'x_velocity': 0.089470280231244,
    'y_position': 0.067994763460335,
    'y_velocity': 0.497401740025201,
  })
# ---
# name: TestSwimmerCostEqual.test_snapshot.57
  0.000384144816295
# ---
# name: TestSwimmerCostEqual.test_snapshot.58
  0.11788280333712
# ---
# name: TestSwimmerCostEqual.test_snapshot.59
  -0.028820445610205
# ---
# name: TestSwimmerCostEqual.test_snapshot.6
  -0.074377273464891
# ---
# name: TestSwimmerCostEqual.test_snapshot.60
  0.115587411881164
# ---
# name: TestSwimmerCostEqual.test_snapshot.61
  0.048651914229101
# ---
# name: TestSwimmerCostEqual.test_snapshot.62
  -0.163031663990311
# ---
# name: TestSwimmerCostEqual.test_snapshot.63
  -0.624124384806579
# ---
# name: TestSwimmerCostEqual.test_snapshot.64
  2.350761838731597
# ---
# name: TestSwimmerCostEqual.test_snapshot.65
  1.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.66
  -0.86671118297226
# ---
# name: TestSwimmerCostEqual.test_snapshot.67
  0.13328881702774
# ---
# name: TestSwimmerCostEqual.test_snapshot.68
  0.751188274689175
# ---
# name: TestSwimmerCostEqual.test_snapshot.69
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.7
  -0.009922812420887
# ---
# name: TestSwimmerCostEqual.test_snapshot.70
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.71
  dict({
    'cost_ctrl': 6.0010683537e-05,
    'cost_velocity': 0.751188274689175,
    'distance_from_origin': 0.091863191685883,
    'reference': 1.0,
    'reference_error': -0.86671118297226,
    'state_of_interest': 0.13328881702774,
    'x_position': 0.066693253671475,
    'x_velocity': 0.13328881702774,
    'y_position': 0.063173221395062,
    'y_velocity': -0.120538551631831,
  })
# ---
# name: TestSwimmerCostEqual.test_snapshot.72
  0.011791559466868
# ---
# name: TestSwimmerCostEqual.test_snapshot.73
  0.065871815702866
# ---
# name: TestSwimmerCostEqual.test_snapshot.74
  0.072159764827508
# ---
# name: TestSwimmerCostEqual.test_snapshot.75
  0.109881598643102
# ---
# name: TestSwimmerCostEqual.test_snapshot.76
  -0.785281035011869
# ---
# name: TestSwimmerCostEqual.test_snapshot.77
  0.712476930243054
# ---
# name: TestSwimmerCostEqual.test_snapshot.78
  -1.943144762787787
# ---
# name: TestSwimmerCostEqual.test_snapshot.79
  2.688002982045506
# ---
# name: TestSwimmerCostEqual.test_snapshot.8
  1.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.80
  1.0
# ---
# name: TestSwimmerCostEqual.test_snapshot.81
  -0.886460617449742
# ---
# name: TestSwimmerCostEqual.test_snapshot.82
  0.113539382550258
# ---
# name: TestSwimmerCostEqual.test_snapshot.83
  0.785812426289378
# ---
# name: TestSwimmerCostEqual.test_snapshot.84
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.85
  False
# ---
# name: TestSwimmerCostEqual.test_snapshot.86
  dict({
    'cost_ctrl': 5.630441308e-05,
    'cost_velocity': 0.785812426289378,
    'distance_from_origin': 0.085899171932677,
    'reference': 1.0,
    'reference_error': -0.886460617449742,
    'state_of_interest': 0.113539382550258,
    'x_position': 0.071234828973486,
    'x_velocity': 0.113539382550258,
    'y_position': 0.048002779917811,
    'y_velocity': -0.379261036931262,
  })
# ---
# name: TestSwimmerCostEqual.test_snapshot.9
  -1.0
# ---
